feat(docker): 添加 Dockerfile 以支持项目构建和运行
- 新增 Dockerfile，定义了构建和运行 ten4j-server 的步骤。
- 更新 README.md，修改运行命令以适应 Docker 环境。
- 在 ServerMain.java 中添加从系统属性读取端口的功能，增强灵活性。